# wordsentences

./: Cargo.toml  README.md
src/: init.rs  main.rs
src/utils/: config.rs
